Pearson methods for connections + refactoring of code + cleaning

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -35,9 +35,6 @@
     "from tqdm import tqdm\n",
     "from importlib import reload\n",
     "\n",
-    "# SEED\n",
-    "SEED = 49387\n",
-    "\n",
     "from matplotlib import pyplot as plt\n",
     "from seaborn import heatmap, color_palette"
    ]
@@ -123,11 +120,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3d3a899-289b-4681-b02b-075d15cef4e0",
+   "cell_type": "raw",
+   "id": "8af71496-7d7c-4a6e-8ccd-6aeda5f66f7c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
     "is_instances_classification = False\n",
@@ -162,22 +157,17 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "7cb7234b-1963-43d5-89cb-eae67b8b0b80",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b43f2095-e432-4866-ae31-c709be518e1a",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-05-11T11:00:09.410918Z",
-     "iopub.status.busy": "2024-05-11T11:00:09.410294Z",
-     "iopub.status.idle": "2024-05-11T11:00:10.521511Z",
-     "shell.execute_reply": "2024-05-11T11:00:10.521146Z",
-     "shell.execute_reply.started": "2024-05-11T11:00:09.410893Z"
-    },
     "scrolled": true
    },
+   "outputs": [],
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"JapaneseVowels\"\n",
+    "dataset_name = \"FSDD\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
    ]
@@ -201,13 +191,17 @@
     "from datasets.preprocessing import flexible_indexing\n",
     "\n",
     "# CROSS-VALIDATION METHODS\n",
+    "# SEED\n",
+    "SEED = 49387\n",
+    "\n",
+    "\n",
     "val_per=0.2\n",
     "val_size = int(len(X_train_raw)*val_per)\n",
     "if is_instances_classification:\n",
     "    if groups is None:\n",
-    "        splits = StratifiedKFold(n_splits=2, shuffle=True).split(X_train_raw, np.argmax(Y_train_raw, axis=1))\n",
+    "        splits = StratifiedKFold(n_splits=2, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1))\n",
     "    else:\n",
-    "        splits = StratifiedGroupKFold(n_splits=2, shuffle=True).split(X_train_raw, np.argmax(Y_train_raw, axis=1), groups)\n",
+    "        splits = StratifiedGroupKFold(n_splits=2, shuffle=True, random_state=SEED).split(X_train_raw, np.argmax(Y_train_raw, axis=1), groups)\n",
     "else: #prediction\n",
     "    splits = TimeSeriesSplit(n_splits=2).split(X_train_raw)\n",
     "\n",
@@ -370,7 +364,7 @@
    "id": "bde977ab-e2ee-43a7-a916-3ae2f4a95780",
    "metadata": {},
    "source": [
-    "## Noizing and duplication"
+    "## Noizing"
    ]
   },
   {
@@ -402,7 +396,6 @@
     "# MULTI\n",
     "X_pretrain_band = X_train_band\n",
     "X_pretrain_band_noisy = [add_noise(instance, noise_std) for instance in X_pretrain_band]\n",
-    "\n",
     "\n",
     "#Train/Val/Test\n",
     "if is_instances_classification:\n",
@@ -470,7 +463,7 @@
     "        print(\"Common index for multivariate prediction should be 0\")\n",
     "        common_size = X_train_raw.shape[common_index]\n",
     "else:\n",
-    "    common_size = len(filtered_peak_freqs)\n"
+    "    common_size = len(peak_freqs)\n"
    ]
   },
   {
@@ -481,8 +474,8 @@
    "outputs": [],
    "source": [
     "# Min window size to get all the dynamics ? \n",
-    "min_window_size = sampling_rate/np.max(np.hstack(filtered_peak_freqs))\n",
-    "max_window_size = sampling_rate/np.min(np.hstack(filtered_peak_freqs))\n",
+    "min_window_size = sampling_rate/np.max(np.hstack(peak_freqs))\n",
+    "max_window_size = sampling_rate/np.min(np.hstack(peak_freqs))\n",
     "\n",
     "print(min_window_size)\n",
     "print(max_window_size)"
@@ -604,9 +597,7 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "2433d6d3-acc2-4bbc-8373-12d692eda119",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import math \n",
@@ -632,14 +623,14 @@
    },
    "outputs": [],
    "source": [
-    "TIME_INCREMENT = 100 # int(max_window_size) or int(min_window_size+1)\n",
+    "TIME_INCREMENT = 50 # int(max_window_size) or int(min_window_size+1)\n",
     "MAX_TIME_INCREMENT = TIME_INCREMENT #int(max_window_size) or None  or TIME_INCREMENT\n",
     "WEIGHT_INCREMENT = 0.08\n",
     "target_rate = 0.79\n",
     "RATE_SPREAD = 0.03\n",
     "\n",
-    "min_variance = 0.004\n",
-    "max_variance = 0.01\n",
+    "min_variance = 0.002\n",
+    "max_variance = 0.02\n",
     "\n",
     "bias_scaling = 0.01\n",
     "input_scaling = 0.01\n",
@@ -714,11 +705,16 @@
    "source": [
     "from reservoir.reservoir import init_matrices\n",
     "from connexion_generation.bounded_hadsp import run_hadsp_algorithm\n",
+    "import connexion_generation.desp\n",
+    "reload(connexion_generation.desp)\n",
+    "import connexion_generation.utility\n",
+    "reload(connexion_generation.utility)\n",
     "from connexion_generation.desp import run_desp_algorithm\n",
     "from scipy import sparse\n",
     "\n",
     "input_connectivity = 1\n",
     "connectivity = 0\n",
+    "function_name = \"desp\" # \"desp\" ou \"hadsp\"\n",
     "\n",
     "def initialise_and_train(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, seed, training_set):\n",
     "    \n",
@@ -726,12 +722,13 @@
     "    bias *= bias_scaling\n",
     "    Win *= input_scaling\n",
     "\n",
-    "    W, state_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "                          target_rate, RATE_SPREAD, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=False, record_history=True)\n",
-    "    variance_history=None\n",
-    "    #W, state_history, variance_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "    #                    min_variance, max_variance, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, mi_based=True,\n",
-    "    #                                                    n_jobs = 1, record_history=True)\n",
+    "    if function_name == \"hadsp\":\n",
+    "        W, state_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "                              target_rate, RATE_SPREAD, instances, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"random\", record_history=True)\n",
+    "        variance_history=None\n",
+    "    elif function_name == \"desp\":\n",
+    "        W, state_history, variance_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "                            min_variance, max_variance, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"mi\", n_jobs = 4,  visualize=False, record_history=True)\n",
     "\n",
     "    connectivity =  W.count_nonzero() / (W.shape[0] * W.shape[1])\n",
     "    eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
@@ -784,22 +781,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99d44149-8fd2-4528-9cdf-1e384eff50c9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# random + multi\n",
-    "Win_random_multi, W_random_multi, bias_random_multi =  init_matrices(n, 1, connectivity_band, K, sr_hadsp_multi)\n",
-    "bias_random_multi= bias_random_multi*bias_scaling\n",
-    "Win_random_multi= Win_random_multi*input_scaling\n",
-    "\n",
-    "eigen_random_multi = sparse.linalg.eigs(W_random_multi, k=1, which=\"LM\", maxiter=W_random_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
-    "sr_random_multi = np.max(np.abs(eigen_random_multi))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "22be4078-9172-48f0-b39f-9b9c634c136e",
    "metadata": {},
    "outputs": [],
@@ -815,7 +796,7 @@
     "    colors = color_palette(\"tab20\")\n",
     "    # NUMBER_OF_STEP_TO_WATCH \n",
     "    WATCH_FROM = 0\n",
-    "    WATCH_TO = 2000\n",
+    "    WATCH_TO = 6000\n",
     "    neurons_evolution = np.array(variance_history)[WATCH_FROM:WATCH_TO]\n",
     "    x =range(len(state_history_multi))[WATCH_FROM:WATCH_TO]\n",
     "    j = 0\n",
@@ -840,8 +821,8 @@
     "random_neurons_indices =  np.sort(np.random.randint(RESERVOIR_SIZE, size=4)) #Size max is 19 because there is not enough colors\n",
     "colors = color_palette(\"tab20\")\n",
     "# NUMBER_OF_STEP_TO_WATCH \n",
-    "WATCH_FROM = 0\n",
-    "WATCH_TO = 4000\n",
+    "WATCH_FROM = 200\n",
+    "WATCH_TO = 3000\n",
     "neurons_evolution = np.array(state_history_multi)[WATCH_FROM:WATCH_TO]\n",
     "x =range(len(state_history_multi))[WATCH_FROM:WATCH_TO]\n",
     "j = 0\n",
@@ -849,6 +830,22 @@
     "    ax0.plot(x, neurons_evolution[: ,i], label=str(i), color=colors[j])\n",
     "    ax0.text(-3+WATCH_FROM, neurons_evolution[0, i],  str(i), color=\"black\", fontsize=12)\n",
     "    j += 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99d44149-8fd2-4528-9cdf-1e384eff50c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random + multi\n",
+    "Win_random_multi, W_random_multi, bias_random_multi =  init_matrices(n, 1, connectivity_band, K, sr_hadsp_multi)\n",
+    "bias_random_multi= bias_random_multi*bias_scaling\n",
+    "Win_random_multi= Win_random_multi*input_scaling\n",
+    "\n",
+    "eigen_random_multi = sparse.linalg.eigs(W_random_multi, k=1, which=\"LM\", maxiter=W_random_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
+    "sr_random_multi = np.max(np.abs(eigen_random_multi))\n"
    ]
   },
   {
@@ -915,7 +912,7 @@
    "source": [
     "print(connectivity_band)\n",
     "if not is_multivariate:\n",
-    "    print(connectivity_hadsp_uni)\n"
+    "    print(connectivity_hadsp_uni)"
    ]
   },
   {
@@ -939,6 +936,11 @@
    },
    "outputs": [],
    "source": [
+    "eigen_random_multi = sparse.linalg.eigs(W_random_multi, k=1, which=\"LM\", maxiter=W_random_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
+    "sr_random_multi = np.max(np.abs(eigen_random_multi))\n",
+    "eigen_hadsp_multi = sparse.linalg.eigs(W_hadsp_multi, k=1, which=\"LM\", maxiter=W_hadsp_multi.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
+    "sr_hadsp_multi = np.max(np.abs(eigen_hadsp_multi))\n",
+    "\n",
     "print(sr_hadsp_multi)\n",
     "print(sr_random_multi)\n",
     "if not is_multivariate:\n",
@@ -947,17 +949,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "41d2e41f-cbfd-493e-bad0-bbb651ca46e6",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2024-03-21T15:00:13.802481Z",
-     "iopub.status.busy": "2024-03-21T15:00:13.801956Z",
-     "iopub.status.idle": "2024-03-21T15:00:13.813032Z",
-     "shell.execute_reply": "2024-03-21T15:00:13.812057Z",
-     "shell.execute_reply.started": "2024-03-21T15:00:13.802451Z"
-    }
-   },
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef926a98-cac8-4736-908f-c54c19850d62",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Spectral radius normalisation\n",
     "normal_sr = 0.9\n",
@@ -1003,9 +999,7 @@
   {
    "cell_type": "markdown",
    "id": "e27380a6-3976-442d-8bb0-34bfc142985a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## Classification"
    ]
@@ -1025,8 +1019,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"X_train_band_duplicated example shape :\", X_train_band_duplicated[1].shape)     \n",
-    "print(\"We should have :\", X_train_band_duplicated[0].shape[1], \"==\", n)"
+    "print(\"X_train_band_duplicated example shape :\", X_train_band[1].shape)     \n",
+    "print(\"We should have :\", X_train_band[0].shape[1], \"==\", common_size)"
    ]
   },
   {
@@ -1046,11 +1040,11 @@
     "# To remember : \n",
     "#  For reservoirpy   pre_s = W @ r + Win @ (u + noise_gen(dist=dist, shape=u.shape, gain=g_in)) + bias\n",
     "\n",
-    "train_data_multi = X_train_band_duplicated # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
+    "train_data_multi = X_train_band # X_train_band_noisy_duplicated or X_train_band_duplicated\n",
     "\n",
-    "reservoir_hadsp_multi, readout_hadsp_multi = init_and_train_model_for_classification(W_hadsp_multi, np.diag(Win_hadsp_multi.A.T[0]), bias_hadsp_multi, leaky_rate, activation_function, train_data_multi, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")\n",
+    "reservoir_hadsp_multi, readout_hadsp_multi = init_and_train_model_for_classification(W_hadsp_multi, Win_hadsp_multi, bias_hadsp_multi, leaky_rate, activation_function, train_data_multi, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")\n",
     "\n",
-    "reservoir_random_multi, readout_random_multi = init_and_train_model_for_classification(W_random_multi, np.diag(Win_random_multi.A.T[0]), bias_random_multi, leaky_rate, activation_function, train_data_multi, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")\n"
+    "reservoir_random_multi, readout_random_multi = init_and_train_model_for_classification(W_random_multi, Win_random_multi, bias_random_multi, leaky_rate, activation_function, train_data_multi, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")\n"
    ]
   },
   {
@@ -1070,12 +1064,12 @@
    "source": [
     "from performances.esn_model_evaluation import predict_model_for_classification, compute_score\n",
     "\n",
-    "test_data_multi = X_test_band_noisy_duplicated # X_test_band_noisy_duplicated or X_test_band_duplicated\n",
+    "test_data_multi_noisy = X_test_band_noisy # X_test_band_noisy or X_test_band\n",
     "\n",
-    "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, N_JOBS)\n",
-    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, \"HADSP multi\", verbosity=1)\n",
+    "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi_noisy, N_JOBS)\n",
+    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, function_name + \" multi\", verbosity=1)\n",
     "\n",
-    "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
+    "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi_noisy, N_JOBS)\n",
     "score = compute_score(Y_pred_random_multi, Y_test, is_instances_classification, \"random multi\", verbosity=1)"
    ]
   },
@@ -1095,10 +1089,10 @@
    "outputs": [],
    "source": [
     "\n",
-    "test_data_multi = X_test_band_duplicated # X_test_band_noisy_duplicated or X_test_band_duplicated\n",
+    "test_data_multi = X_test_band # X_test_band_noisy or X_test_band\n",
     "\n",
     "Y_pred_hadsp_multi = predict_model_for_classification(reservoir_hadsp_multi, readout_hadsp_multi, test_data_multi, -1)\n",
-    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, \"HADSP multi\", verbosity=1)\n",
+    "score = compute_score(Y_pred_hadsp_multi, Y_test, is_instances_classification, function_name + \" multi\", verbosity=1)\n",
     "\n",
     "Y_pred_random_multi = predict_model_for_classification(reservoir_random_multi, readout_random_multi, test_data_multi, N_JOBS)\n",
     "score = compute_score(Y_pred_random_multi, Y_test, is_instances_classification, \"random multi\", verbosity=1)"
@@ -1159,7 +1153,7 @@
    "source": [
     "if not is_multivariate:\n",
     "    Y_pred_hadsp_uni = predict_model_for_classification(reservoir_hadsp_uni, readout_hadsp_uni, test_data_uni, N_JOBS)\n",
-    "    score = compute_score(Y_pred_hadsp_uni, Y_test, \"HADSP uni\")\n",
+    "    score = compute_score(Y_pred_hadsp_uni, Y_test, function_name + \" uni\")\n",
     "    \n",
     "    Y_pred_normal = predict_model_for_classification(reservoir_random_uni, readout_random_uni, test_data_uni, N_JOBS)\n",
     "    score = compute_score(Y_pred_normal, Y_test, \"random uni\")"
