Factorisation de code

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"FSDD\"\n",
+    "dataset_name = \"JapaneseVowels\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
    ]
@@ -626,11 +626,11 @@
     "TIME_INCREMENT = 50 # int(max_window_size) or int(min_window_size+1)\n",
     "MAX_TIME_INCREMENT = TIME_INCREMENT #int(max_window_size) or None  or TIME_INCREMENT\n",
     "WEIGHT_INCREMENT = 0.08\n",
-    "target_rate = 0.79\n",
-    "RATE_SPREAD = 0.03\n",
+    "target_rate = 0.7\n",
+    "RATE_SPREAD = 0.06\n",
     "\n",
-    "min_variance = 0.002\n",
-    "max_variance = 0.02\n",
+    "variance_target = 0.01\n",
+    "variance_spread = 0.008\n",
     "\n",
     "bias_scaling = 0.01\n",
     "input_scaling = 0.01\n",
@@ -723,18 +723,18 @@
     "    Win *= input_scaling\n",
     "\n",
     "    if function_name == \"hadsp\":\n",
-    "        W, state_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "                              target_rate, RATE_SPREAD, instances, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"random\", record_history=True)\n",
+    "        W, state_history, delta_z_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "                              target_rate, RATE_SPREAD, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"random\", record_history=True)\n",
     "        variance_history=None\n",
     "    elif function_name == \"desp\":\n",
-    "        W, state_history, variance_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "                            min_variance, max_variance, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"mi\", n_jobs = 4,  visualize=False, record_history=True)\n",
+    "        W, state_history, delta_z_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "                            variance_target, variance_spread, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"pearson\", n_jobs = 4,  visualize=False, record_history=True)\n",
     "\n",
     "    connectivity =  W.count_nonzero() / (W.shape[0] * W.shape[1])\n",
     "    eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
     "    sr = np.max(np.abs(eigen))\n",
     "    \n",
-    "    return Win, W, bias, connectivity, sr, state_history, variance_history\n"
+    "    return Win, W, bias, connectivity, sr, state_history, delta_z_history\n"
    ]
   },
   {
@@ -770,7 +770,7 @@
     " connectivity_band, \n",
     " sr_hadsp_multi, \n",
     " state_history_multi,\n",
-    " variance_history) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, SEED, X_pretrain_band)\n",
+    " delta_z_history) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, SEED, X_pretrain_band)\n",
     "\n",
     "from matplotlib.colors import ListedColormap\n",
     "\n",
@@ -785,7 +785,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if variance_history is not None:\n",
+    "if delta_z_history is not None:\n",
     "    plt.figure(figsize=(30,14))\n",
     "    plt.suptitle(f'Dynamics', fontsize=16)\n",
     "    \n",
@@ -796,9 +796,9 @@
     "    colors = color_palette(\"tab20\")\n",
     "    # NUMBER_OF_STEP_TO_WATCH \n",
     "    WATCH_FROM = 0\n",
-    "    WATCH_TO = 6000\n",
-    "    neurons_evolution = np.array(variance_history)[WATCH_FROM:WATCH_TO]\n",
-    "    x =range(len(state_history_multi))[WATCH_FROM:WATCH_TO]\n",
+    "    WATCH_TO = 2000\n",
+    "    neurons_evolution = np.array(delta_z_history)[WATCH_FROM:WATCH_TO]\n",
+    "    x =range(len(delta_z_history))[WATCH_FROM:WATCH_TO]\n",
     "    j = 0\n",
     "    for i in random_neurons_indices:\n",
     "        ax0.plot(x, neurons_evolution[: ,i], label=str(i), color=colors[j])\n",
@@ -822,7 +822,7 @@
     "colors = color_palette(\"tab20\")\n",
     "# NUMBER_OF_STEP_TO_WATCH \n",
     "WATCH_FROM = 200\n",
-    "WATCH_TO = 3000\n",
+    "WATCH_TO = 132000\n",
     "neurons_evolution = np.array(state_history_multi)[WATCH_FROM:WATCH_TO]\n",
     "x =range(len(state_history_multi))[WATCH_FROM:WATCH_TO]\n",
     "j = 0\n",
@@ -949,11 +949,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef926a98-cac8-4736-908f-c54c19850d62",
+   "cell_type": "raw",
+   "id": "411eb628-4c08-4275-a6e2-53b480fb9f7f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Spectral radius normalisation\n",
     "normal_sr = 0.9\n",
