Added parallelism to mi clculous + factorized hadsp and desp + generation of spectograms

--- a/General_framework.ipynb
+++ b/General_framework.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "8af71496-7d7c-4a6e-8ccd-6aeda5f66f7c",
+   "id": "f51267a1-04ff-46d2-9107-089d67454298",
    "metadata": {},
    "source": [
     "from datasets.load_datasets import load_dataset_prediction\n",
@@ -159,7 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b43f2095-e432-4866-ae31-c709be518e1a",
+   "id": "040feb60-808c-4c9a-8b40-ae418906ae21",
    "metadata": {
     "scrolled": true
    },
@@ -167,7 +167,7 @@
    "source": [
     "from datasets.load_datasets import load_dataset_classification\n",
     "is_instances_classification = True\n",
-    "dataset_name = \"JapaneseVowels\"\n",
+    "dataset_name = \"FSDD\"\n",
     "\n",
     "is_multivariate, sampling_rate, X_train_raw, X_test_raw, Y_train_raw, Y_test, groups = load_dataset_classification(dataset_name)"
    ]
@@ -266,17 +266,25 @@
     "\n",
     "peak_freqs = extract_peak_frequencies(flat_train_data, sampling_rate, smooth=True, window_length=1, threshold=1e-5, nperseg=1024, visualize=True)\n",
     "nb_peaks = len(peak_freqs[0]) if is_multivariate else len(peak_freqs)\n",
-    "print(\"Non-smoothed peaks: \", nb_peaks)\n",
-    "\n",
+    "print(\"Non-smoothed peaks: \", nb_peaks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc3488bf-2624-44aa-9ca4-7d96c975c392",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "if not is_multivariate:\n",
     "    X_train_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1\n",
+    "        peak_freqs, X_train, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
     "    )\n",
     "    X_val_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1\n",
+    "        peak_freqs, X_val, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
     "    )\n",
     "    X_test_band = generate_multivariate_dataset(\n",
-    "        peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1\n",
+    "        peak_freqs, X_test, sampling_rate, is_instances_classification, nb_jobs=-1, use_spectrogram=True,\n",
     "    )"
    ]
   },
@@ -390,8 +398,8 @@
     "# PRETRAIN NOISE\n",
     "# UNI\n",
     "if not is_multivariate:\n",
-    "    X_pretrain_uni = X_train.flatten()\n",
-    "    X_pretrain_noisy = (add_noise(X_train, noise_std)).flatten()\n",
+    "    X_pretrain_uni = X_train\n",
+    "    X_pretrain_noisy = (add_noise(X_train, noise_std))\n",
     "\n",
     "# MULTI\n",
     "X_pretrain_band = X_train_band\n",
@@ -463,7 +471,9 @@
     "        print(\"Common index for multivariate prediction should be 0\")\n",
     "        common_size = X_train_raw.shape[common_index]\n",
     "else:\n",
-    "    common_size = len(peak_freqs)\n"
+    "    common_size = X_train_band[1].shape[1]\n",
+    "\n",
+    "common_size"
    ]
   },
   {
@@ -512,15 +522,15 @@
     "END = 200\n",
     "DIFF = END - START\n",
     "#CPlot the two for different frequencies\n",
-    "NB_1 = 0\n",
-    "fig, ax = plt.subplots(2, 1, figsize=(24,12))\n",
-    "ax[0].plot(range(DIFF), train_band_data[NB_1, START:END], label='Time serie')\n",
-    "ax[0].plot(range(DIFF), ma[NB_1, START:END], label='Moving average')\n",
-    "ax[0].legend(fontsize=26)\n",
+    "# Define your frequency indices in a list\n",
+    "NBs = [0, 11, 8]\n",
     "\n",
-    "NB_2 = 11\n",
-    "ax[1].plot(range(DIFF), train_band_data[NB_2, START:END], label='Time serie')\n",
-    "ax[1].plot(range(DIFF), ma[NB_2, START:END], label='Moving average')\n",
+    "fig, ax = plt.subplots(len(NBs), 1, figsize=(24, 6 * len(NBs)))\n",
+    "for i, NB in enumerate(NBs):\n",
+    "    ax[i].plot(range(DIFF), train_band_data[NB, START:END], label=peak_freqs[NB])\n",
+    "    #ax[i].plot(range(DIFF), ma[NB, START:END], label='Moving average')\n",
+    "    ax[i].legend(fontsize=26)\n",
+    "    ax[i].set_title(f'Plot for NB = {NB}')\n",
     "\n",
     "for i, ax in enumerate(ax):\n",
     "    # Format subplot\n",
@@ -528,8 +538,8 @@
     "    ax.spines['right'].set_visible(False)\n",
     "    ax.tick_params(axis='both', labelsize=26)\n",
     "    # draw vertical lines to show the window_size\n",
-    "    for x in range(START, END, 100):\n",
-    "        ax.axvspan(x, x + window_size, color='g', alpha=0.2)\n",
+    "    #for x in range(START, END, 100):\n",
+    "    #    ax.axvspan(x, x + window_size, color='g', alpha=0.2)\n",
     "\n",
     "plt.show()"
    ]
@@ -538,30 +548,29 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "89500f15-9959-4dcf-afbf-f6ca24364343",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "if is_instances_classification:\n",
-    "    xtrain_to_plot =  np.concatenate(X_train_band, axis=0).T\n",
+    "    xtrain_to_plot =  np.concatenate(X_train_band, axis=0)\n",
     "else:\n",
-    "    xtrain_to_plot = X_train_band.T\n",
+    "    xtrain_to_plot = X_train_band\n",
     "\n",
     "plt.figure(figsize=(30,14))\n",
     "plt.suptitle(f'Dynamics', fontsize=16)\n",
     "\n",
     "# NEURON ACTIVITY PLOT \n",
     "ax0 = plt.subplot2grid((4, 3), (0, 0), colspan=3, rowspan=2)\n",
-    "random_neurons_indices =  np.sort(np.random.randint(common_size, size=11)) #Size max is 19 because there is not enough colors\n",
+    "random_neurons_indices =  np.sort(np.random.randint(common_size, size=3)) #Size max is 19 because there is not enough colors\n",
     "colors = color_palette(\"tab20\")\n",
     "# NUMBER_OF_STEP_TO_WATCH\n",
-    "WATCH_FROM = 700\n",
-    "WATCH_TO = 1000\n",
-    "x =range(WATCH_FROM, WATCH_TO)\n",
+    "WATCH_FROM = 0\n",
+    "WATCH_TO = 2000\n",
+    "input_evolution = np.array(xtrain_to_plot)[WATCH_FROM:WATCH_TO]\n",
+    "x =range(len(xtrain_to_plot))[WATCH_FROM:WATCH_TO]\n",
     "j = 0\n",
     "for i in random_neurons_indices:\n",
-    "    ax0.plot(x, xtrain_to_plot[i][x], label=str(i), color=colors[j])\n",
+    "    ax0.plot(x, input_evolution[:, i], label=str(i), color=colors[j])\n",
     "    j += 1\n"
    ]
   },
@@ -623,13 +632,13 @@
    },
    "outputs": [],
    "source": [
-    "TIME_INCREMENT = 50 # int(max_window_size) or int(min_window_size+1)\n",
-    "MAX_TIME_INCREMENT = TIME_INCREMENT #int(max_window_size) or None  or TIME_INCREMENT\n",
-    "WEIGHT_INCREMENT = 0.08\n",
+    "TIME_INCREMENT = 10 # int(max_window_size) or int(min_window_size+1)\n",
+    "MAX_TIME_INCREMENT = int(max_window_size) #int(max_window_size) or None  or TIME_INCREMENT\n",
+    "WEIGHT_INCREMENT = 0.02\n",
     "target_rate = 0.7\n",
     "RATE_SPREAD = 0.06\n",
     "\n",
-    "variance_target = 0.01\n",
+    "variance_target = 0.009\n",
     "variance_spread = 0.008\n",
     "\n",
     "bias_scaling = 0.01\n",
@@ -663,18 +672,18 @@
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
-    },
-    "scrolled": true
+    }
    },
    "outputs": [],
    "source": [
-    "from reservoir.activation_functions import tanh, heaviside, sigmoid\n",
+    "from reservoir.activation_functions import tanh, heaviside, sigmoid, softplus, heaviside\n",
     "\n",
     "# the activation function choosen for the rest of the experiment\n",
     "# activation_function = lambda x : sigmoid(2*(x-0.5))tanh(x)\n",
     "activation_function = lambda x : tanh(x)\n",
     "\n",
-    "plt.plot(np.linspace(0, 1.1, 100), activation_function(np.linspace(0, 1.1, 100)))\n",
+    "x=np.linspace(0, 2, 100)\n",
+    "plt.plot(x, activation_function(x))\n",
     "plt.grid()"
    ]
   },
@@ -704,12 +713,7 @@
    "outputs": [],
    "source": [
     "from reservoir.reservoir import init_matrices\n",
-    "from connexion_generation.bounded_hadsp import run_hadsp_algorithm\n",
-    "import connexion_generation.desp\n",
-    "reload(connexion_generation.desp)\n",
-    "import connexion_generation.utility\n",
-    "reload(connexion_generation.utility)\n",
-    "from connexion_generation.desp import run_desp_algorithm\n",
+    "from connexion_generation.hadsp import run_algorithm\n",
     "from scipy import sparse\n",
     "\n",
     "input_connectivity = 1\n",
@@ -723,12 +727,14 @@
     "    Win *= input_scaling\n",
     "\n",
     "    if function_name == \"hadsp\":\n",
-    "        W, state_history, delta_z_history = run_hadsp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "                              target_rate, RATE_SPREAD, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"random\", record_history=True)\n",
+    "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "                              target_rate, RATE_SPREAD, function_name, is_instance=is_instances_classification, use_full_instance = False, max_increment=MAX_TIME_INCREMENT, \n",
+    "                                                          max_partners=12, method = \"random\", n_jobs = 12, visualize=False, record_history=True)\n",
     "        variance_history=None\n",
     "    elif function_name == \"desp\":\n",
-    "        W, state_history, delta_z_history = run_desp_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
-    "                            variance_target, variance_spread, instances=is_instances_classification, max_increment=MAX_TIME_INCREMENT, max_partners=12, method = \"pearson\", n_jobs = 4,  visualize=False, record_history=True)\n",
+    "        W, state_history, delta_z_history = run_algorithm(W, Win, bias, leaky_rate, activation_function, training_set, TIME_INCREMENT, WEIGHT_INCREMENT,\n",
+    "                            variance_target, variance_spread, function_name, is_instance=is_instances_classification, use_full_instance = True, max_increment=MAX_TIME_INCREMENT, \n",
+    "                                                          max_partners=12, method = \"pearson\", n_jobs = 12, visualize=False, record_history=True)\n",
     "\n",
     "    connectivity =  W.count_nonzero() / (W.shape[0] * W.shape[1])\n",
     "    eigen = sparse.linalg.eigs(W, k=1, which=\"LM\", maxiter=W.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
@@ -772,10 +778,16 @@
     " state_history_multi,\n",
     " delta_z_history) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, K, bias_scaling, SEED, X_pretrain_band)\n",
     "\n",
+    "\n",
     "from matplotlib.colors import ListedColormap\n",
     "\n",
     "custom_colormap = ListedColormap(np.vstack((plt.cm.cividis(0.0), plt.cm.cividis(np.linspace(0.5, 1, 128)))))\n",
-    "heatmap(W_hadsp_multi.todense(), cmap=custom_colormap, cbar=True)"
+    "vmin = 0\n",
+    "vmax = max(np.max(Win_hadsp_multi), np.max(W_hadsp_multi.todense()))\n",
+    "fig, axs = plt.subplots(ncols=3, gridspec_kw=dict(width_ratios=[0.5,6,0.2]))\n",
+    "heatmap(Win_hadsp_multi, cmap=custom_colormap, cbar=False, square=True, ax=axs[0], vmin=vmin, vmax=vmax)\n",
+    "heatmap(W_hadsp_multi.todense(), cmap=custom_colormap, yticklabels=False, cbar=False, ax=axs[1], vmin=vmin, vmax=vmax)\n",
+    "fig.colorbar(axs[1].collections[0], cax=axs[2])"
    ]
   },
   {
@@ -794,9 +806,9 @@
     "    random_neurons_indices =  np.sort(np.random.randint(RESERVOIR_SIZE, size=19)) #Size max is 19 because there is not enough colors\n",
     "    random_neurons_indices = np.append(random_neurons_indices, 51)\n",
     "    colors = color_palette(\"tab20\")\n",
-    "    # NUMBER_OF_STEP_TO_WATCH \n",
+    "    # NUMBER_OF_STEP_TO_WATCH\n",
     "    WATCH_FROM = 0\n",
-    "    WATCH_TO = 2000\n",
+    "    WATCH_TO = 4000\n",
     "    neurons_evolution = np.array(delta_z_history)[WATCH_FROM:WATCH_TO]\n",
     "    x =range(len(delta_z_history))[WATCH_FROM:WATCH_TO]\n",
     "    j = 0\n",
@@ -821,8 +833,8 @@
     "random_neurons_indices =  np.sort(np.random.randint(RESERVOIR_SIZE, size=4)) #Size max is 19 because there is not enough colors\n",
     "colors = color_palette(\"tab20\")\n",
     "# NUMBER_OF_STEP_TO_WATCH \n",
-    "WATCH_FROM = 200\n",
-    "WATCH_TO = 132000\n",
+    "WATCH_FROM = 2000\n",
+    "WATCH_TO = 4000\n",
     "neurons_evolution = np.array(state_history_multi)[WATCH_FROM:WATCH_TO]\n",
     "x =range(len(state_history_multi))[WATCH_FROM:WATCH_TO]\n",
     "j = 0\n",
@@ -888,19 +900,33 @@
     "     sr_hadsp_uni,\n",
     "     state_history_hadsp_uni,\n",
     "     _) = initialise_and_train(input_scaling, n, input_connectivity, connectivity, n, bias_scaling, SEED, X_pretrain_uni)\n",
+    "\n",
+    "    from matplotlib.colors import ListedColormap\n",
     "    \n",
+    "    custom_colormap = ListedColormap(np.vstack((plt.cm.cividis(0.0), plt.cm.cividis(np.linspace(0.5, 1, 128)))))\n",
+    "    vmin = 0\n",
+    "    vmax = max(np.max(Win_hadsp_uni), np.max(W_hadsp_uni.todense()))\n",
+    "    fig, axs = plt.subplots(ncols=3, gridspec_kw=dict(width_ratios=[0.5,6,0.2]))\n",
+    "    heatmap(Win_hadsp_uni, cmap=custom_colormap, cbar=False, square=True, ax=axs[0], vmin=vmin, vmax=vmax)\n",
+    "    heatmap(W_hadsp_uni.todense(), cmap=custom_colormap, yticklabels=False, cbar=False, ax=axs[1], vmin=vmin, vmax=vmax)\n",
+    "    fig.colorbar(axs[1].collections[0], cax=axs[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25c8506d-833e-40ab-9c7c-bbf7b8f2b53d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if not is_multivariate:    \n",
     "    # random + uni\n",
     "    Win_normal, W_normal, bias_normal = init_matrices(n, 1, connectivity_hadsp_uni, n, sr_hadsp_uni)\n",
     "    bias_normal= bias_normal*bias_scaling\n",
     "    Win_normal= Win_normal*input_scaling\n",
     "    \n",
     "    eigen_normal = sparse.linalg.eigs(W_normal, k=1, which=\"LM\", maxiter=W_normal.shape[0] * 20, tol=0.1, return_eigenvectors=False)\n",
-    "    sr_normal = np.max(np.abs(eigen_normal))\n",
-    "    \n",
-    "    from matplotlib.colors import ListedColormap\n",
-    "    \n",
-    "    custom_colormap = ListedColormap(np.vstack((plt.cm.cividis(0.0), plt.cm.cividis(np.linspace(0.5, 1, 128)))))\n",
-    "    heatmap(W_hadsp_uni.todense(), cmap=custom_colormap, cbar=True)"
+    "    sr_normal = np.max(np.abs(eigen_normal))"
    ]
   },
   {
@@ -1137,9 +1163,9 @@
    "outputs": [],
    "source": [
     "if not is_multivariate:\n",
-    "    reservoir_hadsp_uni, readout_hadsp_uni = init_and_train_model_for_classification(W_hadsp_uni, Win_hadsp_uni, bias_hadsp_uni, activation_function, RIDGE_COEF, train_data_uni, Y_train, N_JOBS)\n",
-    "    \n",
-    "    reservoir_random_uni, readout_random_uni = init_and_train_model_for_classification(W_normal, Win_normal, bias_normal, activation_function, RIDGE_COEF, train_data_uni, Y_train, N_JOBS)"
+    "    reservoir_hadsp_uni, readout_hadsp_uni = init_and_train_model_for_classification(W_hadsp_uni, Win_hadsp_uni, bias_hadsp_uni, leaky_rate, activation_function, train_data_uni, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")\n",
+    "\n",
+    "    reservoir_random_uni, readout_random_uni = init_and_train_model_for_classification(W_normal, Win_normal, bias_normal, leaky_rate, activation_function, train_data_uni, Y_train, N_JOBS, RIDGE_COEF, mode=\"sequence-to-vector\")"
    ]
   },
   {
@@ -1151,10 +1177,10 @@
    "source": [
     "if not is_multivariate:\n",
     "    Y_pred_hadsp_uni = predict_model_for_classification(reservoir_hadsp_uni, readout_hadsp_uni, test_data_uni, N_JOBS)\n",
-    "    score = compute_score(Y_pred_hadsp_uni, Y_test, function_name + \" uni\")\n",
+    "    score = compute_score(Y_pred_hadsp_uni, Y_test, is_instances_classification, function_name + \" uni\", verbosity=1)\n",
     "    \n",
     "    Y_pred_normal = predict_model_for_classification(reservoir_random_uni, readout_random_uni, test_data_uni, N_JOBS)\n",
-    "    score = compute_score(Y_pred_normal, Y_test, \"random uni\")"
+    "    score = compute_score(Y_pred_normal, Y_test, is_instances_classification, \"random uni\", verbosity=1)"
    ]
   },
   {
@@ -1447,9 +1473,7 @@
   {
    "cell_type": "markdown",
    "id": "0b27da37",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "# Analysis"
    ]
